--- a/web/src/sass/large.scss
+++ b/web/src/sass/large.scss
@@ -1,8 +1,120 @@
 // Common rules for anything larger than a mobile phone
 
 .navbar {
+    padding-bottom: 10px;
     .app-logo {
         margin: 0 1em 0 0.5em;
         float: right;
     }
+    .nav-list {
+        padding: ($height_nav - 30) 0 0 0;
+    }
+    .nav-link-li {
+        height: 27px;
+        border-bottom: 3px solid transparent;
+        margin-right: 0.5em;
+    }
+    .nav-link {
+        display: inline-block;
+        float: left;
+        position: relative;
+        padding: 0 0.5em 0 35px;
+        border-radius: 3px 3px 0 0;
+        color: white;
+        &.active {
+            border-bottom-color: black;
+            cursor: default;
+            &, &:hover, &:active {
+                background: rgba(0, 0, 0, 0.7);
+            }
+        }
+    }
+    .nav-link, .nav-link-btn {
+        &:before {
+            position: absolute;
+            left: 5px;
+            top: 0;
+        }
+    }
+    .nav-link-overview {
+        border-color: #424242;
+        .nav-link {
+            &:before {
+                background-position: 0 0;
+            }
+        }
+    }
+    .nav-link-analysis {
+        border-color: #f4a742;
+        .nav-link {
+            &:before {
+                background-position: -28px 0;
+            }
+        }
+    }
+    .nav-link-funds {
+        border-color: #546e7a;
+        .nav-link {
+            &:before {
+                background-position: -56px 0;
+            }
+        }
+    }
+    .nav-link-income {
+        border-color: #d84315;
+        .nav-link {
+            &:before {
+                background-position: -84px 0;
+            }
+        }
+    }
+    .nav-link-bills {
+        border-color: rgb(183, 28, 28);
+        .nav-link {
+            &:before {
+                background-position: -112px 0;
+            }
+        }
+    }
+    .nav-link-food {
+        border-color: rgb(67, 160, 71);
+        .nav-link {
+            &:before {
+                background-position: -140px 0;
+            }
+        }
+    }
+    .nav-link-general {
+        border-color: rgb(1, 87, 155);
+        .nav-link {
+            &:before {
+                background-position: -168px 0;
+            }
+        }
+    }
+    .nav-link-holiday {
+        border-color: rgb(0, 137, 123);
+        .nav-link {
+            &:before {
+                background-position: 0 -28px;
+            }
+        }
+    }
+    .nav-link-social {
+        border-color: rgb(191, 158, 36);
+        .nav-link {
+            &:before {
+                background-position: -28px -28px;
+            }
+        }
+    }
+    .nav-link-logout {
+        border-color: #eee;
+        .nav-link {
+            &:before {
+                background-position: -56px -28px;
+            }
+        }
+    }
 }
+
